fix(App): App components paddings add

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
 @import './config/config.scss';
+@import './components/App.scss';
 @import './components/TabBar.scss';
 @import './components/Nav.scss';
