feat(Gif List): gif list draft create

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,4 @@
 @import './components/App.scss';
 @import './components/TabBar.scss';
 @import './components/Nav.scss';
+@import './components/GifList.scss';
