--- a/src/styles/components/GifList.scss
+++ b/src/styles/components/GifList.scss
@@ -2,6 +2,14 @@
     padding-top: 15px;
 }
 
+.gif-list__empty {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 .gif-list__separator {
     display: block;
     width: 100%;    
@@ -16,10 +24,12 @@
 }
 
 .gif-list__el {
+    position: relative;
 }
 
 .gif-container {
     display: flex;
+    position: relative;
     background-color: #000000;
     width: 100%;
 }
@@ -27,7 +37,7 @@
 
 .gif-container img { 
     width: 100%;
-    height: 250px;
+    height: calc( 100vh - 125px );
     object-fit: contain;
 }
 
@@ -35,18 +45,18 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0 10px;
+    justify-content: center;
+    align-content: center;
+    align-items: center;    
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 10px;
 }
 
-.gif-info h3 {
-    width: 100%;
-}
-
-.gif-info .author {
-    margin-bottom: 15px;
-}
-
-.gif-info .author a {
-    color: #33A3F4;
+.gif-info__star {
+    font-size: 25px;
+    transform: translateY(2.5px);
+    color: white;
+    transition: all 0.2s ease;
 }
