feat(gif): message on click show

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import './components/TabBar.scss';
 @import './components/Nav.scss';
 @import './components/GifList.scss';
+@import './components/Message.scss';
