feat(Spinner, Gif): spinner add and gif star color change

--- a/src/styles/components/GifList.scss
+++ b/src/styles/components/GifList.scss
@@ -55,7 +55,7 @@
     bottom: 10px;
 }
 
-.gif-info__star {
+.gif-info .anticon, .gif-info__star {
     font-size: 25px;
     transform: translateY(2.5px);
     color: white;
